# apksaw

./: .gitignore  .mcp.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  contributing.md  getting-started.md  index.md  installation.md  plugins.md  tool-reference.md
docs/case-studies/: hinge-audit.md  kimi-audit.md
docs/tools/: anti_analysis.md  apk.md  certificates.md  device.md  dex.md  dynamic.md  exploit_gen.md  fuzzer.md  native.md  runtime.md  security.md  strings.md  xrefs.md
examples/plugin-template/: pyproject.toml
src/apksaw/: __init__.py  config.py  db.py  plugins.py  server.py  session.py
src/apksaw/rules/: credentials.yar  crypto.yar  obfuscation.yar  suspicious.yar
src/apksaw/tools/: anti_analysis.py  apk.py  app_links.py  certificates.py  device.py  dex.py  diff.py  dynamic.py  endpoints.py  exploit_gen.py  frida_gen.py  fuzzer.py  fuzzer_v2.py  mapping.py  multidex.py  native.py  patch_analysis.py  protobuf.py  runtime.py  secrets_probe.py  security.py  security_v2.py  strings.py  visualization.py  webview.py  xrefs.py  yara_scan.py
src/apksaw/utils/: adb.py  jadx.py  (+5 more)
tests/: __init__.py  conftest.py  test_anti_analysis.py  test_apk.py  test_app_links.py  test_device.py  test_dex.py  test_exploit_gen.py  test_fuzzer_v2.py  test_http_probe.py  test_native.py  test_runtime.py  test_secrets_probe.py  test_security.py  test_session.py  test_strings.py  test_taint_lite.py  test_webview.py
(+1 files in other folders)
