[project]
name = "apksaw"
version = "0.1.0"
description = "AI-agent Android reverse engineering toolkit"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "androguard>=4.1.2",
    "lief>=0.15.0",
    "capstone>=5.0.0",
    "networkx>=3.0",
    "yara-python>=4.5.0",
    "cryptography>=42.0.0",
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/trinity-cloud/apksaw"
Repository = "https://github.com/trinity-cloud/apksaw"
Issues = "https://github.com/trinity-cloud/apksaw/issues"

[project.optional-dependencies]
dynamic = [
    "frida-tools>=12.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4.0",
]

[project.scripts]
apksaw = "apksaw.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apksaw"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
